test/fails/bad_generics/core2.lgl
// Note that t cannot be a bool
`t add_op<`t>(`t x, `t y) {
    `t result = x + y;
    return result;
}

void main() {
    bool fail = add_op<bool>(true, false);
}